--- a/tutorial_notebook/01_quantum_enhanced_optimization_LABS.ipynb
+++ b/tutorial_notebook/01_quantum_enhanced_optimization_LABS.ipynb
@@ -148,10 +148,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# --- 1. Energy Functions ---\n",
-    "\n",
     "def energy_function(s):\n",
-    "    \"\"\"Compute the energy of a spin configuration s (array of 1/-1).\"\"\"\n",
     "    N = len(s)\n",
     "    E = 0\n",
     "    for k in range(1, N):\n",
@@ -160,20 +157,14 @@
     "    return E\n",
     "\n",
     "def eng_dist(population):\n",
-    "    \"\"\"Compute energy for all members of the population.\"\"\"\n",
     "    return [energy_function(p) for p in population]\n",
     "\n",
     "def get_best(population):\n",
-    "    \"\"\"Return the best configuration and its energy.\"\"\"\n",
     "    E_vals = np.array(eng_dist(population))\n",
     "    best_idx = np.argmin(E_vals)\n",
     "    return population[best_idx], E_vals[best_idx]\n",
     "\n",
-    "\n",
-    "# --- 2. Core Functions ---\n",
-    "\n",
     "def make_child(pop, N):\n",
-    "    \"\"\"Sample from population or combine parents (Crossover).\"\"\"\n",
     "    parent_indices = np.random.choice(len(pop), 2, replace=False)\n",
     "    p1, p2 = pop[parent_indices[0]], pop[parent_indices[1]]\n",
     "    # Single point crossover\n",
@@ -182,14 +173,12 @@
     "    return child\n",
     "\n",
     "def mutate(child, prob):\n",
-    "    \"\"\"Mutate child based on probability.\"\"\"\n",
     "    for i in range(len(child)):\n",
     "        if np.random.rand() < prob:\n",
     "            child[i] *= -1  # Flip -1 to 1 or vice versa\n",
     "    return child\n",
     "\n",
     "def tabu_search_local(child, tabu_size, N, iterations=10):\n",
-    "    \"\"\"Refines the child using Tabu Search.\"\"\"\n",
     "    current = np.copy(child)\n",
     "    best_local = np.copy(child)\n",
     "    tabu_list = [child.tolist()]\n",
@@ -206,54 +195,42 @@
     "        if not neighbors:\n",
     "            break\n",
     "\n",
-    "        # Greedy move to best neighbor\n",
+    "        # Greedy move\n",
     "        neighbors.sort(key=energy_function)\n",
     "        current = neighbors[0]\n",
     "\n",
-    "        # Update Tabu List\n",
     "        tabu_list.append(current.tolist())\n",
     "        if len(tabu_list) > tabu_size:\n",
     "            tabu_list.pop(0)\n",
     "\n",
-    "        # Update best local\n",
     "        if energy_function(current) < energy_function(best_local):\n",
     "            best_local = current.copy()\n",
     "\n",
     "    return best_local\n",
     "\n",
     "\n",
-    "# --- 3. Multi-Tabu Search Algorithm (MTS) ---\n",
-    "\n",
     "def MTS_alg(population, s_star, best_score, target, mutation_prob, tabu_size, max_iter, N):\n",
-    "    \"\"\"Runs the Multi-Tabu Search hybrid algorithm.\"\"\"\n",
     "    iteration = 0\n",
     "    pop_size = len(population)\n",
     "\n",
     "    while best_score > target and iteration < max_iter:\n",
-    "        # Make Child (Crossover)\n",
+    "     \n",
     "        child = make_child(population, N)\n",
-    "\n",
-    "        # Mutate Child\n",
     "        child = mutate(child, mutation_prob)\n",
-    "\n",
-    "        # Tabu Search Local Refinement\n",
     "        refined_child = tabu_search_local(child, tabu_size, N)\n",
     "\n",
-    "        # Evaluate\n",
     "        child_score = energy_function(refined_child)\n",
     "\n",
-    "        # Update best solution\n",
     "        if child_score < best_score:\n",
     "            s_star = refined_child.copy()\n",
     "            best_score = child_score\n",
     "\n",
-    "        # Replace a random population member if improved\n",
     "        replace_idx = np.random.randint(0, pop_size)\n",
     "        if child_score < energy_function(population[replace_idx]):\n",
     "            population[replace_idx] = refined_child\n",
     "\n",
-    "        iteration += 1  # Count every iteration\n",
-    "\n",
+    "        iteration += 1 \n",
+    "        \n",
     "    print(\"\\nFinal Best Solution:\", s_star)\n",
     "    print(\"Final Best Score:\", best_score)\n",
     "    return population, s_star, best_score\n"
